[package]
name = "command_attr"
version = "0.5.3"
authors = ["Alex M. M. <acdenissk69@gmail.com>"]
description = "Procedural macros for command creation for the Serenity library."

documentation.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
proc-macro = true

[dependencies]
quote = "^1.0"
syn = { version = "^1.0", features = ["full", "derive", "extra-traits"] }
proc-macro2 = "^1.0.60"
